# Kitronik-Raspberry-Pi-Air-Quality-Control-HAT-Python

./: KitronikAirQualityControlHAT.py  README.md  index.js  package.json  pyproject.toml
Example Code/: bme688.js
lib/: AirQualityCalculation.js  BaselineCalculation.js  CompensationCalculations.js  DataReading.js  I2CCommunication.js  KitronicBME688.js  KitronicHighPowerOut.js  KitronicOLED.js  KitronicServo.js  KitronikADC.js  KitronikBuzzer.js  KitronikGPIO.js  KitronikRTC.js  KitronikSerial.js  KitronikZIPLEDs.js  SensorInitialization.js
