[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "KitronikAirQualityControlHAT"
version = "1.0"
description = "Library for the Kitronik Air Quality Control HAT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "RPi.GPIO",
    "pyserial",
    "pillow",
    "smbus2"
]

[tool.setuptools.packages.find]
where = ["src"]
